# Deep-Learning-Playground

./: .get-pip.py.swp  .github\workflows\issue-form-submission.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  TrainingContainer.Dockerfile  create-branch.sh  data.csv  dl_results.csv  file_tree_generator.py  gen_access_token.py  generate-directory-tree.yml  get-pip.py  get-pip2.py  go.work  go.work.sum  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements.txt  sweep.yaml  tmux-script.sh  word2vec.model  yml_to_req.py
.aws/: aws_constants.py  build_env.py  task-definition.json  training-task-definition.json
.circleci/: config.yml
.github/: Architecture.md  Backend_Examples.md  CODE_OF_CONDUCT.md  pull_request_template.md
aws_write/: app.py  pyproject.toml
aws_write/aws_helpers/dynamo_db/: constants.py  dynamo_db_utils.py  trainspace_db.py
aws_write/aws_helpers/sqs/: constants.py  sqs_utils.py
aws_write/common/: ai_drive.py  constants.py
aws_write/endpoints/: sqs.py  trainspace.py  utils.py
backend/: app.py  base_db.py  config.ini  constants.py  data.csv  dataset.py  default_datasets.py  dl_eval.py  dl_results.csv  dl_trainer.py  dlp-api.yaml  dlpapi.yml  driver.py  email_notifier.py  epoch_times.csv  loss.py  middleware.py  ml_trainer.py  model.py  model_parser.py  my_deep_learning_model.onnx  my_model.onnx  optimizer.py  parser.py  pretrained.py  pyproject.toml  results.csv  rnn_torchviz  status_db.py  test.py  trainer.py  user_db.py  utils.py  webdriver.py
backend/aws_helpers/aws_rekognition_utils/: rekognition_client.py
backend/aws_helpers/aws_secrets_utils/: aws_constants.py  aws_secrets.py  build_env.py
backend/aws_helpers/dynamo_db_utils/: DynamoUnitTests.md  base_db.py  constants.py  dynamo_db_utils.py  dynamo_wrapper.py  execution_db.py  file_upload_db.py  learnmod_db.py  status_db.py  trainspace.py  trainspace_db.py  user_db.py  userprogress_db.py
backend/aws_helpers/dynamo_db_utils/new/: DynamoUnitTests.md  constants.py  dynamo_db_utils.py  execution_db.py  file_upload_db.py  trainspace_db.py  userprogress_db.py
backend/aws_helpers/lambda_utils/: lambda_client.py
backend/aws_helpers/s3_utils/: s3_bucket_names.py  s3_client.py
backend/aws_helpers/sqs_utils/: constants.py  sqs_client.py
backend/common/: ai_drive.py  audio_utils.py  constants.py  dataset.py  default_datasets.py  email_notifier.py  execution_updates.py  kernel.py  loss_functions.py  utils.py
backend/dl/: detection.py  detection_transforms.py  dl_eval.py  dl_model.py  dl_model_parser.py  dl_trainer.py  pretrained.py  pytorch_pretrained.py
backend/dlp_logging/: __init__.py
backend/endpoints/: aws_endpoints.py  dataset_endpoints.py  deprecated_endpoints.py  s3_edpoints.py  test_endpoints.py  train_endpoints.py  trainspace_endpoints.py  utils.py
backend/firebase_helpers/: authenticate.py  firebase.py
backend/ml/: ml_model_parser.py  ml_trainer.py
backend/openapi/: dataset.openapi.yaml  defaultDataset.openapi.yaml  dlpapi.openapi.yaml  getSignedUploadUrl.openapi.yaml  getUserProgressData.openapi.yaml  img-run.openapi.yaml  ml-run.openapi.yaml  object-detection.openapi.yaml  sendEmail.openapi.yaml  sendEmail.yml  sendUserCodeEval.openapi.yaml  sendUserCodeEval.yml  tabular-run.openapi.yaml  test.openapi.yml  updateUserProgressData.openapi.yaml  upload.openapi.yaml  writeToQueue.openapi.yaml
backend/tests/: test_data_processing.py  test_dl_eval.py  test_imports.py  test_loss_function.py  test_model.py  test_model_parser.py  test_send_email.py  test_zip_loader.py
backend/tests/expected/: cars.csv  job.csv
backend/tests/zip_files/not_zip/: not_zip.md
backendCore/: app.py  pyproject.toml  requirements.txt
backendCore/aws_helpers/: sqs_utils.py
backendCore/aws_helpers/dynamo_db/: constants.py  dynamo_db_utils.py  trainspace_db.py
backendCore/aws_helpers/dynamo_db_utils/: dynamo_db_utils.py  trainspace_db.py
backendCore/aws_helpers/sqs/: sqs_utils.py
backendCore/aws_helpers/sqs_utils/: constants.py
backendCore/common/: ai_drive.py  constants.py
backendCore/dl/: detection.py  dl_eval.py  dl_model_parser.py  dl_trainer.py
backendCore/endpoints/: sqs.py  trainspace.py
cli/: .gitignore  .goreleaser.yaml  README.md  cli-config.yaml  completions.sh  go.mod  go.sum  main.go
conda/: environment.yml  package-lock.json  setup.md
dlp-terraform/: dlp.tf  dynamodb.tf  lambda.tf
frontend/: .eslintrc.json  jest.config.js  jest.config.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
lambda/: package.json  pyproject.toml  serverless.yml
lambda/aws-python-flask-api-project/: package-lock.json  package.json  pyproject.toml  serverless.yml
openapi/: openapi.yaml  test_endpoints.yaml
serverless/: .eslintignore  .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sst.config.ts  tsconfig.json
tests/: test_data_processing.py  test_dl_eval.py  test_dynamo.py  test_imports.py  test_loss_function.py  (+6 more)
training/: Dockerfile  Dockerfile.prod  README.md  app.py  cli.py  docker-compose.prod.yml  docker-compose.yml  environment.yml  manage.py  pyproject.toml  pytest.ini
training/nginx/: nginx.conf
training/tests/: test_dataset_endpoint.py  test_imports.py  test_loss_function.py  test_model.py  test_sk_learn_default_dataset_train_test.py
training/tests/utils/: test_utils.py
training/training/: asgi.py  routes.py  settings.py  trainer.py  urls.py  wsgi.py
training/training/core/: authenticator.py  criterion.py  dataset.py  dl_model.py  optimizer.py  trainer.py
training/training/dl/: dl_model.py
training/training/middleware/: health_check_middleware.py
training/training/routes/: schemas.py
training/training/routes/datasets/default/: __init__.py  columns.py  schemas.py
training/training/routes/image/: __init__.py  image.py  schemas.py
training/training/routes/tabular/: __init__.py  schemas.py  tabular.py
training/training2/: asgi.py  dataset.py  dl_model.py  settings.py  trainer.py  urls.py  wsgi.py
(+544 files in other folders)
