[tool.poetry]
name = "deep-learning-playground"
version = "0.1.0"
description = "Web Application where people new to Deep Learning can input a dataset and toy around with basic Pytorch modules without writing any code"
authors = ["DSGT-DLP <dlp@datasciencegt.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_learning_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.3"
flask-cors = "*"
flask-socketio = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"
mypy = "*"
pytest = "*"
scikit-learn = "*"
scipy = "1.7.3"
boto3 = "*"
pyyaml = "*"
statsmodels = "*"
torch = "*"
transformers = "*"
pre-commit = "*"
torchvision = "*"
timm = "*"
wwf = "*"
fastai = "==2.7.4"
firebase_admin = "*"
pyrebase4 = "*"
moto = "*"
docker = "*"
ggshield = "*"


[tool.poetry.dev-dependencies]
python = ">=3.9"
flake8 = "*"
jupyter = "*"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
