[tool.poetry]
name = "dlp-aws-write"
version = "0.1.0"
description = "Deep Learning Playground AWS Writes Endpoint"
authors = ["DSGT-DLP <dlp@datasciencegt.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dlp_aws_write"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
boto3 = "*"
flask = "2.2.3"
flask-cors = "*"

[tool.poetry.dev-dependencies]
python = ">=3.9"
pytest = "*"
flake8 = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
