[tool.poetry]
name = "dlp-training-service"
version = "0.1.0"
description = "Deep Learning Playground Training Service Endpoint"
authors = ["DSGT-DLP <dlp@datasciencegt.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dlp_training_service"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
