[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lambda"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
boto3 = "^1.28.25"
ggshield = "^1.17.3"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
